--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -2,6 +2,8 @@ imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
     - { resource: services.yml }
+    - { resource: fos/oauth_server.yml}
+    - { resource: fos/user.yml}
     - { resource: "@AuthServerBundle/Resources/config/services.yml" }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
@@ -65,3 +67,4 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
+
