--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -6,3 +6,9 @@ auth_server:
 app:
     resource: '@AppBundle/Controller/'
     type: annotation
+
+fos_oauth_server_token:
+    resource: "@FOSOAuthServerBundle/Resources/config/routing/token.xml"
+
+fos_oauth_server_authorize:
+    resource: "@FOSOAuthServerBundle/Resources/config/routing/authorize.xml"
