--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -3,4 +3,7 @@ app_sandbox:
     type:     annotation
     prefix:   /
 
-
+oauth2_server:
+    resource: "@OAuth2ServerBundle/Controller/"
+    type:     annotation
+    prefix:   /
