--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -7,3 +7,7 @@ oauth2_server:
     resource: "@OAuth2ServerBundle/Controller/"
     type:     annotation
     prefix:   /
+
+NelmioApiDocBundle:
+    resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
+    prefix:   /api/doc
