--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -65,3 +65,8 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
+
+nelmio_api_doc:
+    name: Service Authentication API
+    sandbox:
+        enabled: true
