--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "symfony/swiftmailer-bundle": "~2.3,>=2.3.10",
         "symfony/symfony": "2.8.*",
         "twig/twig": "^1.0||^2.0",
-        "bshaffer/oauth2-server-bundle": "~1.9"
+        "bshaffer/oauth2-server-bundle": "v0.4",
+        "nelmio/api-doc-bundle": "*"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
