--- a/src/App/SandboxBundle/Resources/config/services.yml
+++ b/src/App/SandboxBundle/Resources/config/services.yml
@@ -1,4 +1,5 @@
 services:
-#    app_sandbox.example:
-#        class: App\SandboxBundle\Example
-#        arguments: ["@service_id", "plain_value", "%parameter%"]
+    app.open_id.storage.authorization_code:
+        class: OAuth2\ServerBundle\Storage\OpenID\AuthorizationCode
+        arguments:
+            - '@doctrine.orm.entity_manager'
