--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "description": "The \"Symfony Standard Edition\" distribution",
     "autoload": {
         "psr-4": {
-            "App\\SandboxBundle\\": "src/App/SandboxBundle"
+            "App\\": "src/App/"
         },
         "classmap": [ "app/AppKernel.php", "app/AppCache.php" ]
     },
