--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,13 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "symfony/monolog-bundle": "^3.0.2",
+        "symfony/monolog-bundle": "v3.1.2",
         "symfony/swiftmailer-bundle": "~2.3,>=2.3.10",
         "symfony/symfony": "2.8.*",
         "twig/twig": "^1.0||^2.0",
         "bshaffer/oauth2-server-bundle": "v0.4",
-        "nelmio/api-doc-bundle": "*"
+        "nelmio/api-doc-bundle": "*",
+        "phpunit/phpunit": "^6.4"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
